Made it so that header and keyboard span the whole width of page, while game area does not. Updated background of keyboard so it flows with rest of game. Fixed width of error alert area so that it's not so big on wide screen (I set it to min(50ch,75%)) which works on mobile and on laptop (but haven't tried every test case yet)

--- a/keyboard.css
+++ b/keyboard.css
@@ -3,7 +3,7 @@ div.keyboard {
 	flex-direction: column;
 	gap: 0.375em;
 	width: 100%;
-	background-color: #364954;
+	background-color: var(--background-color);
 	padding-block: 0.5rem;
 }
 
